samples/_failures_safe/1761171330_35a43c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5440d0e5.c: In function ‘main’:
./samples/SAFE/__tmp_5440d0e5.c:155:19: error: ‘mat’ undeclared (first use in this function); did you mean ‘mat2’?
  155 |     print_matrix(&mat
      |                   ^~~
      |                   mat2
./samples/SAFE/__tmp_5440d0e5.c:155:19: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_5440d0e5.c:155:22: error: expected ‘)’ at end of input
  155 |     print_matrix(&mat
      |                 ~    ^
      |                      )
./samples/SAFE/__tmp_5440d0e5.c:155:5: error: expected declaration or statement at end of input
  155 |     print_matrix(&mat
      |     ^~~~~~~~~~~~
